--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^22.15.19",
     "@types/ws": "^8.18.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "wrangler": "^4.15.2"
   }
 }
